<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/activities">
        <menu>
            <item android:id="@+id/scannerButton"
                android:title="@string/scanner_activity"
                android:icon="@drawable/barcode_icon"
                android:orderInCategory="1"
                app:showAsAction="always"/>

            <item android:id="@+id/cartButton"
                android:title="@string/cart_activity"
                android:icon="@drawable/cart_icon"
                android:orderInCategory="2"
                app:showAsAction="always"/>

            <item android:id="@+id/receiptButton"
                android:title="@string/receipt_activity"
                android:icon="@drawable/receipt_icon"
                android:orderInCategory="3"
                app:showAsAction="always"/>

            <item android:id="@+id/reportButton"
                android:title="@string/report_activity"
                android:icon="@drawable/report_icon"
                android:orderInCategory="4"
                app:showAsAction="always"/>
        </menu>
    </item>
    <item android:title="@string/account_manager">
        <menu>
            <item android:id="@+id/account_setting"
                android:title="@string/setting"
                android:icon="@drawable/account_icon"
                android:orderInCategory="5"
                app:showAsAction="always"/>
            <item android:id="@+id/sign_out"
                android:title="@string/sign_out"
                android:icon="@drawable/sign_out_icon"
                android:orderInCategory="6"
                app:showAsAction="always"/>
        </menu>
    </item>

</menu>