<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/scannerButton"
        android:title="@string/scanner_activity"
        android:icon="@drawable/barcode_icon_white"
        android:orderInCategory="1"
        app:showAsAction="always"/>

    <item android:id="@+id/cartButton"
        android:title="@string/cart_activity"
        android:icon="@drawable/cart_icon_white"
        android:orderInCategory="2"
        app:showAsAction="always"/>

    <item android:id="@+id/receiptButton"
        android:title="@string/receipt_activity"
        android:icon="@drawable/receipt_icon_white"
        android:orderInCategory="3"
        app:showAsAction="always"/>

    <item android:id="@+id/reportButton"
        android:title="Reports"
        android:icon="@drawable/report_icon_white"
        android:orderInCategory="4"
        app:showAsAction="always"/>

    <item
        android:id="@+id/search_view"
        android:title="@string/report_activity"
        android:icon="@drawable/search_icon"
        android:orderInCategory="5"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"/>

</menu>