<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo">

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="50sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/login_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="25dp"
        android:layout_below="@+id/sign_in_text"
        android:hint="@string/login_name_hint"
        android:fontFamily="serif"
        android:background="@color/colorWhite"
        android:paddingStart="10dp"
        android:alpha="0.8"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_name"
        android:layout_marginHorizontal="50dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:fontFamily="serif"
            android:background="@color/colorWhite"
            android:alpha="0.8"
            android:paddingStart="10dp"/>
    </com.google.android.material.textfield.TextInputLayout >

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textSize="25sp"
        android:fontFamily="serif"
        android:textColor="@color/colorWhite"
        android:background="@drawable/btn_background"/>

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/sign_in_button"
        android:text="@string/sign_up_text"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="10sp"
        android:fontFamily="serif"
        android:layout_below="@id/sign_in_button"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/sign_up_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/sign_in_button"
        android:text="@string/sign_up_link"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="10sp"
        android:fontFamily="serif"
        android:layout_below="@id/sign_in_button"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/also_sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/also_sign_in_text"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:fontFamily="serif"
        android:layout_below="@id/sign_up_text"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/google_sign_in_btn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/gmail_icon"
        android:layout_below="@id/also_sign_in_text"
        android:layout_alignEnd="@id/also_sign_in_text"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/facebook_sign_in_btn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/facebook_icon"
        android:layout_below="@id/also_sign_in_text"
        android:layout_alignStart="@id/also_sign_in_text"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/version"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:fontFamily="serif"/>

</RelativeLayout>