<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/logo"
    tools:context=".activity.RegisterActivity"
    android:paddingVertical="50dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_alignTop="@+id/top_form_border"
            android:layout_alignBottom="@id/bottom_form_border"
            android:background="@color/colorWhite"
            android:alpha="0.8"
            android:contentDescription="@string/form_description" />

        <TextView
            android:id="@+id/top_form_border"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignTop="@id/sign_up_page"/>

        <TextView
            android:id="@+id/sign_up_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:fontFamily="serif"
            android:layout_marginTop="70dp"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/login_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_name_text"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="serif"
            android:layout_below="@id/sign_up_page"
            android:layout_alignStart="@id/form"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp" />

        <EditText
            android:id="@+id/sign_up_login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/login_name_hint"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="serif"
            android:layout_alignStart="@id/form"
            android:layout_alignEnd="@id/form"
            android:layout_below="@id/login_name_text"
            android:layout_marginHorizontal="20dp"
            android:importantForAutofill="no"
            android:inputType="text" />

        <FrameLayout
            android:id="@+id/login_name_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_login_name"
            android:layout_alignStart="@+id/form"
            android:layout_alignEnd="@id/form"
            android:layout_marginHorizontal="20dp"/>


        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="serif"
            android:layout_below="@id/login_name_error"
            android:layout_alignStart="@id/form"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_password_layout"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignStart="@id/form"
            android:layout_alignEnd="@id/form"
            android:layout_below="@id/password_text"
            android:layout_marginHorizontal="20dp"
            app:hintEnabled="false">
            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:textSize="15sp"
                android:textColor="@color/colorBlack"
                android:fontFamily="serif"
                android:inputType="textPassword"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/password_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_password_layout"
            android:layout_alignStart="@+id/form"
            android:layout_alignEnd="@id/form"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:id="@+id/re_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re_password_text"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="serif"
            android:layout_below="@id/password_error"
            android:layout_alignStart="@id/form"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_re_password_layout"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignStart="@id/form"
            android:layout_alignEnd="@id/form"
            android:layout_below="@id/re_password_text"
            android:layout_marginHorizontal="20dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/sign_up_re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_password_hint"
                android:textSize="15sp"
                android:textColor="@color/colorBlack"
                android:fontFamily="serif"
                android:inputType="textPassword"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/re_password_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_re_password_layout"
            android:layout_alignStart="@+id/form"
            android:layout_alignEnd="@id/form"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:id="@+id/user_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name_text"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="serif"
            android:layout_below="@id/re_password_error"
            android:layout_alignStart="@id/form"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp" />

        <EditText
            android:id="@+id/sign_up_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_hint"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="serif"
            android:layout_alignStart="@id/form"
            android:layout_alignEnd="@id/form"
            android:layout_below="@id/user_name_text"
            android:layout_marginHorizontal="20dp"
            android:inputType="text"
            android:importantForAutofill="no" />

        <FrameLayout
            android:id="@+id/user_name_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_user_name"
            android:layout_alignStart="@+id/form"
            android:layout_alignEnd="@id/form"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="serif"
            android:layout_below="@id/user_name_error"
            android:layout_alignStart="@id/form"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp" />

        <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="serif"
            android:layout_alignStart="@id/form"
            android:layout_alignEnd="@id/form"
            android:layout_below="@id/email_text"
            android:layout_marginHorizontal="20dp"
            android:importantForAutofill="no"/>

        <FrameLayout
            android:id="@+id/email_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_email"
            android:layout_alignStart="@+id/form"
            android:layout_alignEnd="@id/form"
            android:layout_marginHorizontal="20dp"/>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_btn"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:background="@drawable/btn_background"
            android:layout_below="@id/email_error"
            android:layout_alignStart="@id/form"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_btn"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:background="@drawable/btn_background"
            android:layout_below="@id/email_error"
            android:layout_alignEnd="@id/form"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp" />

        <TextView
            android:id="@+id/bottom_form_border"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/submit_btn"
            android:layout_marginTop="30dp" />


    </RelativeLayout>
</ScrollView>